src/test/resources/private/typechecking/fail/double_decl/fail08_ctorDouble.jova
class Test {

    Test (int a){

    }

    Test (int b){

    }

    Test (int b, bool c){

    }

    Test (int b, bool c){

    }

    Test (int b, bool c, float d){

    }

    Test (int b, bool c, float d){

    }
}